--- a/index.html
+++ b/index.html
@@ -203,9 +203,10 @@
   <div id="comparisonModal" class="hidden fixed inset-0 bg-black bg-opacity-50 modal z-50 flex items-center justify-center p-4">
     <div class="bg-white rounded-xl shadow-2xl w-full max-w-6xl max-h-[90vh] flex flex-col">
       <div class="p-4 border-b flex justify-between items-center flex-shrink-0">
-        <div class="flex items-center">
-          <img src="favicon-32x32.png" alt="CEORater Logo" class="h-8 w-8 mr-3">
-          <h2 class="text-xl font-bold">CEO Comparison</h2>
+        <div class="flex items-center gap-x-3">
+          <h1 class="text-2xl font-orbitron italic font-bold text-blue-600">CEORater</h1>
+          <span class="text-2xl font-light text-gray-300">|</span>
+          <h2 class="text-xl font-bold text-gray-800">CEO Comparison</h2>
         </div>
         <button id="closeComparisonModalBtn" class="text-gray-400 hover:text-gray-600">
           <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
