--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <main class="bg-white rounded-xl shadow-lg p-4 sm:p-6">
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mb-4">
-        <input id="searchInput" type="text" placeholder="Search by CEO, Company, or Ticker." class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow" />
+        <input id="searchInput" type="text" placeholder="Search by CEO, Ticker, or Co." class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow" />
         <select id="industryFilter" class="w-full px-4 py-3 border border-gray-300 rounded-lg bg-white"></select>
         <select id="sectorFilter" class="w-full px-4 py-3 border border-gray-300 rounded-lg bg-white"></select>
         <select id="sortControl" class="w-full px-4 py-3 border border-gray-300 rounded-lg bg-white">
