--- a/index.html
+++ b/index.html
@@ -207,6 +207,6 @@
   </div>
 
   <script src="firebase-config.js"></script>
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
