--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-5 gap-4 mb-4 items-center">
         <input id="searchInput" type="text" placeholder="Search: CEO, Ticker, or Co." class="w-full px-4 py-2 text-sm border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow" />
         <select id="founderFilter" class="w-full px-4 py-2 text-sm border border-gray-300 rounded-lg bg-white focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow">
-          <option value="">Founder & Non-Founder CEOs</option>
+          <option value="">CEO Type</option>
           <option value="Y">Founder CEOs</option>
           <option value="N">Non-Founder CEOs</option>
         </select>
