--- a/index.html
+++ b/index.html
@@ -115,8 +115,12 @@
           <option value="company-asc">Company A‑Z</option>
           <option value="company-desc">Company Z‑A</option>
         </select>
-        <select id="industryFilter" class="w-full px-4 py-2 text-sm border border-gray-300 rounded-lg bg-white focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow"></select>
-        <select id="sectorFilter" class="w-full px-4 py-2 text-sm border border-gray-300 rounded-lg bg-white focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow"></select>
+        <select id="industryFilter" class="w-full px-4 py-2 text-sm border border-gray-300 rounded-lg bg-white focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow">
+            <option value="">All Industries</option>
+        </select>
+        <select id="sectorFilter" class="w-full px-4 py-2 text-sm border border-gray-300 rounded-lg bg-white focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow">
+            <option value="">All Sectors</option>
+        </select>
       </div>
 
       <div class="flex justify-end mb-4">
