--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
     <!-- Stat Cards Section -->
     <div id="statCardContainer" class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-6">
       <!-- Stat Card 1: Median TSR -->
-      <div class="bg-white p-4 rounded-lg shadow">
+      <div class="bg-white p-4 rounded-lg shadow text-center">
         <h3 class="text-sm font-medium text-gray-500">Median TSR</h3>
         <p id="medianTsrStat" class="text-2xl font-bold text-gray-900 mt-1">--</p>
       </div>
       <!-- Stat Card 2: Avg. Founder AlphaScore -->
-      <div class="bg-white p-4 rounded-lg shadow">
+      <div class="bg-white p-4 rounded-lg shadow text-center">
         <h3 class="text-sm font-medium text-gray-500">Avg. Founder AlphaScore</h3>
-        <p id="avgFounderAlphaScoreStat" class="text-2xl font-bold text-gray-900 mt-1">--</p>
+        <p id="avgFounderAlphaScoreStat" class="text-2xl font-bold mt-1 font-orbitron text-blue-600">--</p>
       </div>
       <!-- Stat Card 3: Founder CEOs -->
-      <div class="bg-white p-4 rounded-lg shadow">
+      <div class="bg-white p-4 rounded-lg shadow text-center">
         <h3 class="text-sm font-medium text-gray-500">Founder CEOs</h3>
         <p id="founderCeoStat" class="text-2xl font-bold text-gray-900 mt-1">--</p>
       </div>
       <!-- Stat Card 4: Median CEO Compensation -->
-      <div class="bg-white p-4 rounded-lg shadow">
+      <div class="bg-white p-4 rounded-lg shadow text-center">
         <h3 class="text-sm font-medium text-gray-500">Median CEO Compensation</h3>
         <p id="medianCompStat" class="text-2xl font-bold text-gray-900 mt-1">--</p>
       </div>
