--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
   <header class="bg-white shadow-md sticky top-0 z-30">
     <div class="container mx-auto px-4">
       <div class="flex justify-between items-center py-3">
-        <div class="flex items-center gap-6">
-          <h1 class="text-2xl md:text-3xl font-orbitron italic font-bold text-blue-600">CEORater</h1>
+        <div class="flex items-center gap-3 sm:gap-6">
+          <h1 class="text-xl sm:text-2xl md:text-3xl font-orbitron italic font-bold text-blue-600">CEORater</h1>
           <div class="hidden md:flex bg-gray-100 rounded-lg p-1 shadow-inner">
             <button id="allCeosTab" class="watchlist-tab px-4 py-1.5 rounded-md text-sm font-medium active">All CEOs</button>
             <button id="watchlistTab" class="watchlist-tab px-4 py-1.5 rounded-md text-sm font-medium">My Watchlist</button>
           </div>
         </div>
-        <nav class="flex items-center gap-3">
-          <button id="watchlistBtn" class="hidden px-3 py-1 bg-purple-600 text-white rounded-lg hover:bg-purple-700 transition text-sm">My Watchlist (<span id="watchlistCount">0</span>)</button>
+        <nav class="flex items-center gap-2 sm:gap-3">
+          <button id="watchlistBtn" class="hidden md:inline-block px-3 py-1 bg-purple-600 text-white rounded-lg hover:bg-purple-700 transition text-sm">My Watchlist (<span id="watchlistCount">0</span>)</button>
           <span id="userEmail" class="hidden text-sm text-gray-600 px-3 py-1"></span>
           <button id="loginBtn" class="px-3 py-1.5 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition text-sm">Log in</button>
           <button id="logoutBtn" class="hidden px-3 py-1.5 border rounded-lg hover:bg-gray-100 transition text-sm">Log out</button>
@@ -62,7 +62,7 @@
 
   <div class="container mx-auto p-4 md:p-8">
     
-    <!-- Stat Cards Section -->
+    <!-- Stat Cards Section - Now Responsive -->
     <div id="statCardContainer" class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-6">
       <!-- Stat Card 1: Median TSR -->
       <div class="bg-white p-4 rounded-lg shadow text-center">
@@ -86,12 +86,12 @@
       </div>
     </div>
 
-    <!-- Filters and Main Content Section -->
+    <!-- Filters and Main Content Section - Now Responsive -->
     <main class="bg-white rounded-xl shadow-lg p-4 sm:p-6">
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-5 gap-4 mb-4 items-center">
-        <input id="searchInput" type="text" placeholder="Search: CEO, Ticker, or Co." class="w-full px-4 py-2 text-sm border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow" />
+        <input id="searchInput" type="text" placeholder="Search: CEO, Ticker, or Co." class="w-full px-4 py-2 text-sm border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow sm:col-span-2 lg:col-span-1" />
         <select id="founderFilter" class="w-full px-4 py-2 text-sm border border-gray-300 rounded-lg bg-white focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow">
-          <option value="">All CEOs</option>
+          <option value="">CEO Type</option>
           <option value="Y">Founder CEOs</option>
           <option value="N">Non-Founder CEOs</option>
         </select>
@@ -123,8 +123,12 @@
         </select>
       </div>
 
-      <div class="flex justify-end mb-4">
-        <button id="downloadExcelButton" class="px-4 py-2 bg-green-600 text-white font-semibold rounded-lg hover:bg-green-700 transition">Export to Excel</button>
+      <div class="flex justify-between items-center mb-4">
+        <div class="md:hidden"> <!-- This toggle will only show on mobile -->
+            <button id="mobileAllCeosTab" class="watchlist-tab px-4 py-1.5 rounded-md text-sm font-medium active">All CEOs</button>
+            <button id="mobileWatchlistTab" class="watchlist-tab px-4 py-1.5 rounded-md text-sm font-medium">My Watchlist</button>
+        </div>
+        <button id="downloadExcelButton" class="px-4 py-2 bg-green-600 text-white font-semibold rounded-lg hover:bg-green-700 transition ml-auto">Export to Excel</button>
       </div>
 
       <div id="lastUpdated" class="text-xs text-gray-500 text-right mb-4 h-4"></div>
