--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <button id="watchlistTab" class="watchlist-tab px-4 py-1.5 rounded-md text-sm font-medium">My Watchlist</button>
           </div>
         </div>
-        <nav class="flex items-center gap-2 sm:gap-3">
+        <nav class="flex flex-wrap items-center gap-2 sm:gap-3 overflow-x-auto">
           <button id="watchlistBtn" class="hidden md:inline-block px-3 py-1 bg-purple-600 text-white rounded-lg hover:bg-purple-700 transition text-sm">My Watchlist (<span id="watchlistCount">0</span>)</button>
           <span id="userEmail" class="hidden text-sm text-gray-600 px-3 py-1"></span>
           <button id="loginBtn" class="px-3 py-1.5 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition text-sm">Log in</button>
@@ -63,7 +63,7 @@
   <div class="container mx-auto p-4 md:p-8">
     
     <!-- Stat Cards Section - Now Responsive -->
-    <div id="statCardContainer" class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-6">
+    <div id="statCardContainer" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4 mb-6">
       <!-- Stat Card 1: Median TSR -->
       <div class="bg-white p-4 rounded-lg shadow text-center">
         <h3 class="text-sm font-medium text-gray-500">Median TSR</h3>
@@ -124,10 +124,6 @@
       </div>
 
       <div class="flex justify-between items-center mb-4">
-        <div class="md:hidden"> <!-- This toggle will only show on mobile -->
-            <button id="mobileAllCeosTab" class="watchlist-tab px-4 py-1.5 rounded-md text-sm font-medium active">All CEOs</button>
-            <button id="mobileWatchlistTab" class="watchlist-tab px-4 py-1.5 rounded-md text-sm font-medium">My Watchlist</button>
-        </div>
         <button id="downloadExcelButton" class="px-4 py-2 bg-green-600 text-white font-semibold rounded-lg hover:bg-green-700 transition ml-auto">Export to Excel</button>
       </div>
 
